examples/test/testpolicy5485.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5485
  namespace: namespace251
spec:
  podSelector:
    matchLabels:
      key40: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value3
      podSelector:
        matchLabels:
          key29: value29
          key6: value46
          key33: value8
